# AdobePremiereProMCP

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Justfile  PremierPro.bat  PremierPro.command  PremierPro.sh  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cep-panel/: .debug  package-lock.json  package.json
cep-panel/CSXS/: manifest.xml
cep-panel/scripts/: setup-csinterface.js  validate.js
cep-panel/src/: CSInterface.js  index.html  panel.js
cep-panel/src/host/: core.jsx  premiere.jsx
cli/: package-lock.json  package.json
cli/src/: auth.ts  chat.ts  index.ts  mcp-client.ts  ui.ts
docs/: API_REFERENCE.md  USER_MANUAL.md  architecture.md  competitive-analysis.md  feature-plan.md  index.html  phase-log.md  premiere-pro-api-reference.md
go-orchestrator/: go.mod  go.sum
go-orchestrator/cmd/cli/: main.go
go-orchestrator/cmd/server/: main.go
go-orchestrator/configs/: defaults.yaml
go-orchestrator/internal/config/: config.go
go-orchestrator/internal/embeddedbridge/: launch_unix.go  launch_windows.go
go-orchestrator/internal/grpc/: adapters.go  clients.go  config.go  intelligence_client.go  media_client.go  premiere_client.go  types.go
python-intelligence/: pyproject.toml
python-intelligence/src/: __init__.py  config.py  grpc_server.py  main.py  models.py
python-intelligence/src/analysis/: __init__.py  pacing.py  rhythm.py
python-intelligence/src/edl/: __init__.py  generator.py  timeline_calculator.py  track_assigner.py  validator.py
python-intelligence/src/matching/: __init__.py  embedding_matcher.py  keyword_matcher.py  matcher.py  scoring.py  suggest.py
python-intelligence/src/parser/: __init__.py  asset_extractor.py  duration_estimator.py  script_parser.py
python-intelligence/src/parser/formats/: __init__.py  narration.py  screenplay.py  youtube.py
python-intelligence/tests/: test_edl.py  test_grpc_integration.py  test_matching.py  test_pacing.py  test_parser.py
rust-engine/: Cargo.toml  build.rs
rust-engine/src/: lib.rs  main.rs
rust-engine/src/assets/: fingerprint.rs  mod.rs  scanner.rs
rust-engine/src/grpc/: mod.rs  server.rs
rust-engine/src/media/: formats.rs  mod.rs  probe.rs  scenes.rs
rust-engine/src/thumbnails/: generator.rs  mod.rs
rust-engine/src/waveform/: analyzer.rs  mod.rs
rust-engine/tests/: grpc_integration.rs
scripts/: .pids  cursor-mcp-launcher.cjs  cursor-mcp-with-ts-bridge.cmd  install-cep-panel-win.bat  install-cep-panel.sh  start-all.sh  start-python.sh  start-rust.sh  start-ts.sh  status.sh  stop-all.sh
ts-bridge/: package-lock.json  package.json  tsconfig.json
ts-bridge/src/: config.ts  index.ts
(+112 files in other folders)
