[package]
name = "premierpro-media-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance media processing engine for PremierPro MCP"

[features]
default = []
ffmpeg = ["dep:ffmpeg-next"]

[dependencies]
# gRPC / Protobuf
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Media processing - FFmpeg bindings (optional, requires system FFmpeg)
ffmpeg-next = { version = "7", optional = true }

# Pure Rust audio decoding (always available as fallback)
symphonia = { version = "0.5", features = ["all"] }

# Hashing / fingerprinting
sha2 = "0.10"
hex = "0.4"

# Filesystem
walkdir = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
